change story button text

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <li><span class="timeframe">Aug 2023 - Present</span><hr class="bullet-line"><span class="colon">: </span><strong>I became a certified full-stack developer via Codecademy</strong> while serving in remote South Africa as a Peace Corps volunteer.</li>
                 </ul>
             </div>
-            <a href="mailto: jonathanMwoodruff@gmail.com" class="email-link"><button>Tell me why you should be my next employer</button></a>
+            <a href="mailto: jonathanMwoodruff@gmail.com" class="email-link"><button>Tell me why I should work for you</button></a>
         </section>
     </main>
     <footer>
