change project description for love note

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div></a>
                 <a href="./love_note/love-note.html"><div class="project love-note">
                     <img src="./images/love_note_generator_cover.png" alt="Love Note Generator app">
-                    <p class="project-description">Generate a love note for your partner</p>
+                    <p class="project-description">Love Note Generator</p>
                 </div></a>
             </div>
             <a href="mailto: jonathanMwoodruff@gmail.com" class="email-link"><button>Ask me what I'm working on now</button></a>
