--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <script src="./index.js" defer></script>
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href=".images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href=".images/favicon-16x16.png">
-    <link rel="manifest" href=".images/site.webmanifest">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
+    <link rel="manifest" href="./images/site.webmanifest">
     <!-- google fonts -->>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
