--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
             <div class="projects">
                 <a href="https://github.com/jonathan-woodruff/tachy" target="_blank"><div class="project tachy">
                     <img src="./images/tachy_logo.png" alt="Tachy app">
+                    <h3>Tachy app</h3>
                     <p class="project-description">Tachy is a full-stack web app that generates an optimized nursing staff schedule</p>
-                    <p class="project-caption">Tachy app</p>
                 </div></a>
                 <a href="./love_note/love-note.html"><div class="project love-note">
                     <img src="./images/love_note_generator_cover.png" alt="Love Note Generator app">
-                    <p class="project-description">Love Note Generator</p>
-                    <p class="project-caption">Love Note Generator</p>
+                    <h3>Love Note Generator</h3>
+                    <p class="project-description">Generate a love note for your partner</p>
                 </div></a>
             </div>
             <a href="mailto: jonathanMwoodruff@gmail.com" class="email-link"><button>Ask me what I'm working on now</button></a>
