--- a/love_note/love-note.html
+++ b/love_note/love-note.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../common.css">
     <link rel="stylesheet" href="love-note.css">
     <script src="./love-note.js" defer></script>
     <!-- favicon -->
