change love note and tachy names and descriptions

--- a/love_note/love-note.html
+++ b/love_note/love-note.html
@@ -27,7 +27,7 @@
         </div>
     </header>
     <main>
-        <h1>Love Note Generator</h1>
+        <h1>Love Note</h1>
         <div class="subheaderbox">
             <p class="subheader">Hand your partner a love note.</p>
             <p class="subheader">Note sure what to write?</p>
