--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
             <div class="projects">
                 <a href="https://github.com/jonathan-woodruff/tachy" target="_blank"><div class="project tachy">
                     <img src="./images/tachy_logo.png" alt="Tachy app">
-                    <h3>Tachy app</h3>
-                    <p class="project-description">Tachy is a full-stack web app that generates an optimized nursing staff schedule</p>
+                    <h3>Tachy</h3>
+                    <p class="project-description">Generate an optimized nursing staff schedule (full-stack)</p>
                 </div></a>
                 <a href="./love_note/love-note.html"><div class="project love-note">
                     <img src="./images/love_note_generator_cover.png" alt="Love Note Generator app">
-                    <h3>Love Note Generator</h3>
-                    <p class="project-description">Generate a love note for your partner</p>
+                    <h3>Love Note</h3>
+                    <p class="project-description">Generate a love note for your partner (front-end)</p>
                 </div></a>
             </div>
             <a href="mailto: jonathanMwoodruff@gmail.com" class="email-link"><button>Ask me what I'm working on now</button></a>
