add mocha skill

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
                     <figcaption>React</figcaption>
                 </figure>
                 <figure>
+                    <img src="./images/mocha_logo.png" alt="Mocha logo">
+                    <figcaption>Mocha</figcaption>
+                </figure>
+                <figure>
                     <img src="./images/redux_logo.jpeg" alt="Redux logo">
                     <figcaption>Redux</figcaption>
                 </figure>
