added video demo to html and added styling for it

--- a/index.html
+++ b/index.html
@@ -79,8 +79,15 @@
             <a href="mailto: jonathanMwoodruff@gmail.com" class="email-link"><button>Ask me which new skills I'm building</button></a>
         </section>
         <section class="projects-section">
-            <h2>Projects</h2>
+            <h2>Project Demos</h2>
+            <div class="videos">
+                <video controls>
+                    <source src="./videos/got_groceries_demo.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
             <!--Need underline below h2-->
+            <!--
             <div class="projects">
                 <a href="https://github.com/jonathan-woodruff/tachy" target="_blank"><div class="project tachy">
                     <img src="./images/tachy_logo.png" alt="Tachy app">
@@ -93,6 +100,7 @@
                     <p class="project-description">Generate a love note for your partner (front-end)</p>
                 </div></a>
             </div>
+            -->
             <a href="mailto: jonathanMwoodruff@gmail.com" class="email-link"><button>Ask me what I'm working on now</button></a>
         </section>
         <section class="story-section">
