updated profile pic, logos, and story text

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <main>
         <div class="banner">
-            <img src="./images/profile_pic.png" alt="Profile picture of Jonathan Woodruff" class="profile">
+            <img src="./images/profile_pic.jpg" alt="Profile picture of Jonathan Woodruff" class="profile">
             <h1>Hi, I'm Jonathan</h1>
             <img src="./images/handshake.gif" alt="emojis shaking hands" class="handshake" id="handshake">
             <button id="shake-button">Shake my hand</button>
@@ -48,32 +48,20 @@
                     <figcaption>JavaScript</figcaption>
                 </figure>
                 <figure>
-                    <img src="./images/node_logo.webp" alt="Node logo">
-                    <figcaption>Node</figcaption>
+                    <img src="./images/postgresql_logo.webp" alt="PostgreSQL logo">
+                    <figcaption>PostgreSQL</figcaption>
+                </figure>
+                <figure>
+                    <img src="./images/express_logo.webp" alt="Express logo">
+                    <figcaption>Express</figcaption>
                 </figure>
                 <figure>
                     <img src="./images/react_logo.webp" alt="React logo">
                     <figcaption>React</figcaption>
                 </figure>
                 <figure>
-                    <img src="./images/mocha_logo.png" alt="Mocha logo">
-                    <figcaption>Mocha</figcaption>
-                </figure>
-                <figure>
-                    <img src="./images/redux_logo.jpeg" alt="Redux logo">
-                    <figcaption>Redux</figcaption>
-                </figure>
-                <figure>
-                    <img src="./images/sheets_logo.webp" alt="Apps Script logo">
-                    <figcaption>Apps Script</figcaption>
-                </figure>
-                <figure>
-                    <img src="./images/sql_logo.webp" alt="SQL logo">
-                    <figcaption>SQL</figcaption>
-                </figure>
-                <figure>
-                    <img src="./images/python_logo.webp" alt="Python logo">
-                    <figcaption>Python</figcaption>
+                    <img src="./images/node_logo.webp" alt="Node logo">
+                    <figcaption>Node</figcaption>
                 </figure>
             </div>
             <a href="mailto: jonathanMwoodruff@gmail.com" class="email-link"><button>Ask me which new skills I'm building</button></a>
@@ -111,7 +99,7 @@
                     <li><span class="timeframe">2013</span><hr class="bullet-line"><span class="colon">: </span><strong>I wrote my first line of code</strong> in an Intro to Programming class I attended so I could graduate with my Bachelors in Mathematics from Western Oregon University.</li>
                     <li><span class="timeframe">Aug 2013 - May 2015</span><hr class="bullet-line"><span class="colon">: </span><strong>I coded numerous optimization algorithms</strong> mostly using Python on my path to earning my Masters in Industrial Engineering from Auburn University.</li>
                     <li><span class="timeframe">Jun 2015 - Jul 2018</span><hr class="bullet-line"><span class="colon">: </span><strong>I developed numerous SQL queries and occasionally donned my software developer hat to write an API or to review code</strong> while working as a Business Intelligence Developer for Epic Systems Corporation in Verona, Wisconsin.</li>
-                    <li><span class="timeframe">Aug 2018 - Jun 2023</span><hr class="bullet-line"><span class="colon">: </span><strong>I developed <a href="https://github.com/jonathan-woodruff/tachy" target="_blank">Tachy</a>, a full-stack web app written in Python,</strong> and I explored careers as a special education aide, as a certified high school math teacher, and I took a couple of marketing-related jobs at <a href="https://cxl.com" target="_blank">CXL</a> and at <a href="https://everyonehatesmarketers.com" target="_blank">Everyone Hates Marketers</a>.</li>
+                    <li><span class="timeframe">Aug 2018 - Jun 2023</span><hr class="bullet-line"><span class="colon">: </span><strong>I developed my first full-stack web app using Python</strong> while working in the education and marketing sectors.</li>
                     <li><span class="timeframe">Aug 2023 - Present</span><hr class="bullet-line"><span class="colon">: </span><strong>I became a certified full-stack developer via Codecademy</strong> while serving in remote South Africa as a Peace Corps volunteer.</li>
                 </ul>
             </div>
