update jpg to JPG for profile pic

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <main>
         <div class="banner">
-            <img src="./images/profile_pic.jpg" alt="Profile picture of Jonathan Woodruff" class="profile">
+            <img src="./images/profile_pic.JPG" alt="Profile picture of Jonathan Woodruff" class="profile">
             <h1>Hi, I'm Jonathan</h1>
             <img src="./images/handshake.gif" alt="emojis shaking hands" class="handshake" id="handshake">
             <button id="shake-button">Shake my hand</button>
