added link to github and skills demonstrated for got groceries project

--- a/index.html
+++ b/index.html
@@ -68,11 +68,27 @@
         </section>
         <section class="projects-section">
             <h2>Project Demos</h2>
+            <h3>Got Groceries</h3>
+            <div class="projects-link">
+                <a href="https://github.com/jonathan-woodruff/got-groceries" target="_blank">See Got Groceries on github</a>
+            </div>
             <div class="videos">
                 <video controls>
                     <source src="./videos/got_groceries_demo.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
+            </div>
+            <div class="video-skills-demonstrated">
+                <ul>
+                    <li><strong>Full stack app development</strong> using the PERN stack (PostgreSQL, Express, React, Node)</li>
+                    <li><strong>User authentication</strong> using both username/password and Google SSO</li>
+                    <li><strong>React Router</strong> for client-side routing</li>
+                    <li><strong>Redux</strong> for organized state management</li>
+                    <li><strong>Material User Interface (MUI)</strong> for a professional design</li>
+                    <li><strong>Passport, Axios, CORS</strong> for route and client/server security</li>
+                    <li><strong>Safe user-input handling</strong> using prepared statements and validation</li>
+                    <li><strong>Database design and querying</strong> using SQL</li>
+                </ul>
             </div>
             <!--Need underline below h2-->
             <!--
