improved bullet points content and design

--- a/index.html
+++ b/index.html
@@ -69,9 +69,6 @@
         <section class="projects-section">
             <h2>Project Demos</h2>
             <h3>Got Groceries</h3>
-            <div class="projects-link">
-                <a href="https://github.com/jonathan-woodruff/got-groceries" target="_blank">See Got Groceries on github</a>
-            </div>
             <div class="videos">
                 <video controls>
                     <source src="./videos/got_groceries_demo.mp4" type="video/mp4">
@@ -79,16 +76,20 @@
                 </video>
             </div>
             <div class="video-skills-demonstrated">
+                <p>Features...</p>
                 <ul>
                     <li><strong>Full stack app development</strong> using the PERN stack (PostgreSQL, Express, React, Node)</li>
                     <li><strong>User authentication</strong> using both username/password and Google SSO</li>
                     <li><strong>React Router</strong> for client-side routing</li>
                     <li><strong>Redux</strong> for organized state management</li>
-                    <li><strong>Material User Interface (MUI)</strong> for a professional design</li>
-                    <li><strong>Passport, Axios, CORS</strong> for route and client/server security</li>
+                    <li><strong>Material design</strong> using MUI for a professional design</li>
+                    <li><strong>Passport, Axios, CORS</strong> for secure routes and server communications</li>
                     <li><strong>Safe user-input handling</strong> using prepared statements and validation</li>
-                    <li><strong>Database design and querying</strong> using SQL</li>
+                    <li><strong>Relational database design and queries</strong> using SQL</li>
                 </ul>
+            </div>
+            <div class="projects-link">
+                <a href="https://github.com/jonathan-woodruff/got-groceries" target="_blank">See Got Groceries on github</a>
             </div>
             <!--Need underline below h2-->
             <!--
@@ -112,9 +113,9 @@
             <!--Need underline-->
             <div class="bullets">
                 <ul>
-                    <li><span class="timeframe">2013</span><hr class="bullet-line"><span class="colon">: </span><strong>I wrote my first line of code</strong> in an Intro to Programming class I attended so I could graduate with my Bachelors in Mathematics from Western Oregon University.</li>
+                    <li><span class="timeframe">2013</span><hr class="bullet-line"><span class="colon">: </span><strong>I wrote my first line of code</strong> in an Intro to Programming class so I could graduate with my Bachelors in Mathematics from Western Oregon University.</li>
                     <li><span class="timeframe">Aug 2013 - May 2015</span><hr class="bullet-line"><span class="colon">: </span><strong>I coded numerous optimization algorithms</strong> mostly using Python on my path to earning my Masters in Industrial Engineering from Auburn University.</li>
-                    <li><span class="timeframe">Jun 2015 - Jul 2018</span><hr class="bullet-line"><span class="colon">: </span><strong>I developed numerous SQL queries and occasionally donned my software developer hat to write an API or to review code</strong> while working as a Business Intelligence Developer for Epic Systems Corporation in Verona, Wisconsin.</li>
+                    <li><span class="timeframe">Jun 2015 - Jul 2018</span><hr class="bullet-line"><span class="colon">: </span><strong>I developed numerous SQL queries and occasionally programmed software</strong> while working as a Business Intelligence Developer for Epic Systems Corporation in Verona, Wisconsin.</li>
                     <li><span class="timeframe">Aug 2018 - Jun 2023</span><hr class="bullet-line"><span class="colon">: </span><strong>I developed my first full-stack web app using Python</strong> while working in the education and marketing sectors.</li>
                     <li><span class="timeframe">Aug 2023 - Present</span><hr class="bullet-line"><span class="colon">: </span><strong>I became a certified full-stack developer via Codecademy</strong> while serving in remote South Africa as a Peace Corps volunteer.</li>
                 </ul>
