--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <li><span class="timeframe">Aug 2013 - May 2015</span><hr class="bullet-line"><span class="colon">: </span><strong>I coded numerous optimization algorithms</strong> mostly using Python on my path to earning my Masters in Industrial Engineering from Auburn University.</li>
                     <li><span class="timeframe">Jun 2015 - Jul 2018</span><hr class="bullet-line"><span class="colon">: </span><strong>I developed numerous SQL queries and occasionally programmed software</strong> while working as a Business Intelligence Developer for Epic Systems Corporation in Verona, Wisconsin.</li>
                     <li><span class="timeframe">Aug 2018 - Jun 2023</span><hr class="bullet-line"><span class="colon">: </span><strong>I developed my first full-stack web app using Python</strong> while working in the education and marketing sectors.</li>
-                    <li><span class="timeframe">Aug 2023 - Present</span><hr class="bullet-line"><span class="colon">: </span><strong>I became a certified full-stack developer via Codecademy</strong> while serving in remote South Africa as a Peace Corps volunteer.</li>
+                    <li><span class="timeframe">Aug 2023 - Present</span><hr class="bullet-line"><span class="colon">: </span><strong>I became a <a href="./images/full-stack-certification.pdf" target="_blank">certified full-stack developer</a> via Codecademy</strong> while serving in remote South Africa as a Peace Corps volunteer.</li>
                 </ul>
             </div>
             <a href="mailto: jonathanMwoodruff@gmail.com" class="email-link"><button>Tell me why I should work for you</button></a>
