--- a/index.html
+++ b/index.html
@@ -67,8 +67,33 @@
             <a href="mailto: jonathanMwoodruff@gmail.com" class="email-link"><button>Ask me which new skills I'm building</button></a>
         </section>
         <section class="projects-section">
-            <h2>Project Demos</h2>
-            <h3>Got Groceries</h3>
+            <h2>Portfolio</h2>
+            <h3>Jeezik | June 2024</h3>
+            <div class="projects-link">
+                <a href="https://github.com/jonathan-woodruff/jeezik-portfolio" target="_blank">See Jeezik on github</a>
+            </div>
+            <div class="videos">
+                <video controls>
+                    <source src="./videos/jeezik_portfolio_demo.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+            <div class="video-skills-demonstrated">
+                <p>Features...</p>
+                <ul>
+                    <li><strong>PERN stack</strong> (PostgreSQL, Express, React, Node)</li>
+                    <li><strong>Redux</strong> for organized state management</li>
+                    <li><strong>Material design</strong> using MUI for a professional look and feel</li>
+                    <li><strong>User authentication and authorization</strong> using JWTs and Passport</li>
+                    <li><strong>Advanced calculations</strong> using <a href="./images/jeezik_model.pdf" target="_blank">a linear programming model</a> to optimize the anesthesiologist schedule</li>
+                    <li><strong>Data parsing</strong> to generate a CSV file</li>
+                </ul>
+            </div>
+
+            <h3>Got Groceries | April 2024</h3>
+            <div class="projects-link">
+                <a href="https://github.com/jonathan-woodruff/got-groceries" target="_blank">See Got Groceries on github</a>
+            </div>
             <div class="videos">
                 <video controls>
                     <source src="./videos/got_groceries_demo.mp4" type="video/mp4">
@@ -78,34 +103,15 @@
             <div class="video-skills-demonstrated">
                 <p>Features...</p>
                 <ul>
-                    <li><strong>Full stack app development</strong> using the PERN stack (PostgreSQL, Express, React, Node)</li>
-                    <li><strong>User authentication</strong> using both username/password and Google SSO</li>
-                    <li><strong>React Router</strong> for client-side routing</li>
+                    <li><strong>PERN stack</strong> (PostgreSQL, Express, React, Node)</li>
                     <li><strong>Redux</strong> for organized state management</li>
-                    <li><strong>Material design</strong> using MUI for a professional design</li>
-                    <li><strong>Passport, Axios, CORS</strong> for secure routes and server communications</li>
+                    <li><strong>Material design</strong> using MUI for a professional look and feel</li>
+                    <li><strong>User authentication and authorization</strong> using JWTs and Passport</li>
                     <li><strong>Safe user-input handling</strong> using prepared statements and validation</li>
                     <li><strong>Relational database design and queries</strong> using SQL</li>
                 </ul>
             </div>
-            <div class="projects-link">
-                <a href="https://github.com/jonathan-woodruff/got-groceries" target="_blank">See Got Groceries on github</a>
-            </div>
-            <!--Need underline below h2-->
-            <!--
-            <div class="projects">
-                <a href="https://github.com/jonathan-woodruff/tachy" target="_blank"><div class="project tachy">
-                    <img src="./images/tachy_logo.png" alt="Tachy app">
-                    <h3>Tachy</h3>
-                    <p class="project-description">Generate an optimized nursing staff schedule (full-stack)</p>
-                </div></a>
-                <a href="./love_note/love-note.html"><div class="project love-note">
-                    <img src="./images/love_note_generator_cover.png" alt="Love Note Generator app">
-                    <h3>Love Note</h3>
-                    <p class="project-description">Generate a love note for your partner (front-end)</p>
-                </div></a>
-            </div>
-            -->
+
             <a href="mailto: jonathanMwoodruff@gmail.com" class="email-link"><button>Ask me what I'm working on now</button></a>
         </section>
         <section class="story-section">
@@ -116,7 +122,7 @@
                     <li><span class="timeframe">2013</span><hr class="bullet-line"><span class="colon">: </span><strong>I wrote my first line of code</strong> in an Intro to Programming class so I could graduate with my Bachelors in Mathematics from Western Oregon University.</li>
                     <li><span class="timeframe">Aug 2013 - May 2015</span><hr class="bullet-line"><span class="colon">: </span><strong>I coded numerous optimization algorithms</strong> mostly using Python on my path to earning my Masters in Industrial Engineering from Auburn University.</li>
                     <li><span class="timeframe">Jun 2015 - Jul 2018</span><hr class="bullet-line"><span class="colon">: </span><strong>I developed numerous SQL queries and occasionally programmed software</strong> while working as a Business Intelligence Developer for Epic Systems Corporation in Verona, Wisconsin.</li>
-                    <li><span class="timeframe">Aug 2018 - Jun 2023</span><hr class="bullet-line"><span class="colon">: </span><strong>I developed my first full-stack web app using Python</strong> while working in the education and marketing sectors.</li>
+                    <li><span class="timeframe">Aug 2018 - Jun 2023</span><hr class="bullet-line"><span class="colon">: </span><strong>I developed my first full-stack web app on the anvil.works platform</strong> while working in the education and marketing sectors.</li>
                     <li><span class="timeframe">Aug 2023 - Present</span><hr class="bullet-line"><span class="colon">: </span><strong>I became a <a href="./images/full-stack-certification.pdf" target="_blank">certified full-stack developer</a> via Codecademy</strong> while serving in remote South Africa as a Peace Corps volunteer.</li>
                 </ul>
             </div>
