updated description for jeezik app

--- a/index.html
+++ b/index.html
@@ -79,15 +79,7 @@
                 </video>
             </div>
             <div class="video-skills-demonstrated">
-                <p>Features...</p>
-                <ul>
-                    <li><strong>PERN stack</strong> (PostgreSQL, Express, React, Node)</li>
-                    <li><strong>Redux</strong> for organized state management</li>
-                    <li><strong>Material design</strong> using MUI for a professional look and feel</li>
-                    <li><strong>User authentication and authorization</strong> using JWTs and Passport</li>
-                    <li><strong>Advanced calculations</strong> using <a href="./images/jeezik_model.pdf" target="_blank">a linear programming model</a> to optimize the anesthesiologist schedule</li>
-                    <li><strong>Data parsing</strong> to generate a CSV file</li>
-                </ul>
+                <p>Description: Jeezik is a PERN app that uses <a href="./images/jeezik_model.pdf" target="_blank">a linear programming model</a> behind the scenes to minimize the total travel time for the selected anesthesiologists.</p>
             </div>
 
             <h3>Got Groceries | April 2024</h3>
