updated descriptions for both apps in portfolio

--- a/index.html
+++ b/index.html
@@ -69,9 +69,6 @@
         <section class="projects-section">
             <h2>Portfolio</h2>
             <h3>Jeezik | June 2024</h3>
-            <div class="projects-link">
-                <a href="https://github.com/jonathan-woodruff/jeezik-portfolio" target="_blank">See Jeezik on github</a>
-            </div>
             <div class="videos">
                 <video controls>
                     <source src="./videos/jeezik_portfolio_demo.mp4" type="video/mp4">
@@ -79,13 +76,10 @@
                 </video>
             </div>
             <div class="video-skills-demonstrated">
-                <p>Description: Jeezik is a PERN app that uses <a href="./images/jeezik_model.pdf" target="_blank">a linear programming model</a> behind the scenes to minimize the total travel time for the selected anesthesiologists.</p>
+                <p><a href="https://github.com/jonathan-woodruff/jeezik-portfolio" target="_blank">Jeezik</a> is a PERN app that uses <a href="./images/jeezik_model.pdf" target="_blank">a linear programming model</a> behind the scenes to minimize the total travel time for the selected anesthesiologists.</p>
             </div>
 
             <h3>Got Groceries | April 2024</h3>
-            <div class="projects-link">
-                <a href="https://github.com/jonathan-woodruff/got-groceries" target="_blank">See Got Groceries on github</a>
-            </div>
             <div class="videos">
                 <video controls>
                     <source src="./videos/got_groceries_demo.mp4" type="video/mp4">
@@ -93,9 +87,8 @@
                 </video>
             </div>
             <div class="video-skills-demonstrated">
-                <p>Features...</p>
+                <p><a href="https://github.com/jonathan-woodruff/got-groceries" target="_blank">Got Groceries</a> is a PERN app that features...</p>
                 <ul>
-                    <li><strong>PERN stack</strong> (PostgreSQL, Express, React, Node)</li>
                     <li><strong>Redux</strong> for organized state management</li>
                     <li><strong>Material design</strong> using MUI for a professional look and feel</li>
                     <li><strong>User authentication and authorization</strong> using JWTs and Passport</li>
