changed footer text

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <footer>
         <div class="footerbox">
             <p class="copyright">Copyright: Jonathan Woodruff | 2024</p>
-            <p>Created from scratch with no template, no nothin'</p>
+            <p>Created with love using good ol' HTML, CSS, and JavaScript</p>
             <p class="quote">I code because I am code</p>
         </div>
     </footer>
