added audio workshops to portfolio

--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
         </section>
         <section class="projects-section">
             <h2>Portfolio</h2>
+            <h3>Audio Workshops | July 2024</h3>
+            <div class="videos">
+                <img src="./images/audio_workshops.PNG" alt="Audio Workshops page" class="portfolio-img">
+            </div>
+            <div class="video-skills-demonstrated">
+                <p><a href="https://jonathan-woodruff.github.io/audio-workshops" target="_blank">Audio Workshops</a> is a static web page made using Tailwind CSS.</p>
+            </div>
             <h3>Jeezik | June 2024</h3>
             <div class="videos">
                 <video controls>
