added tailwindcss logo to skills section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
                     <img src="./images/node_logo.webp" alt="Node logo">
                     <figcaption>Node</figcaption>
                 </figure>
+                <figure>
+                    <img src="./images/tailwind_logo.png" alt="Tailwind CSS logo">
+                    <figcaption>Tailwind CSS</figcaption>
+                </figure>
             </div>
             <a href="mailto: jonathanMwoodruff@gmail.com" class="email-link"><button>Ask me which new skills I'm building</button></a>
         </section>
