added mean kitty and jest skill

--- a/index.html
+++ b/index.html
@@ -67,11 +67,19 @@
                     <img src="./images/tailwind_logo.png" alt="Tailwind CSS logo">
                     <figcaption>Tailwind CSS</figcaption>
                 </figure>
+                <figure>
+                    <img src="./images/jest_logo.jpeg" alt="Jest logo">
+                    <figcaption>Jest</figcaption>
+                </figure>
             </div>
             <a href="mailto: jonathanMwoodruff@gmail.com" class="email-link"><button>Ask me which new skills I'm building</button></a>
         </section>
         <section class="projects-section">
             <h2>Portfolio</h2>
+            <h3>Mean Kitty | August 2024</h3>
+            <div class="video-skills-demonstrated">
+                <p><a href="https://mean-kitty.onrender.com" target="_blank">Mean Kitty</a> is a React app made using Test-Driven Development (TDD) with Jest and React Testing Library. <a href="https://github.com/jonathan-woodruff/mean-kitty" target="_blank">View it on GitHub</a>.</p>
+            </div>
             <h3>Audio Workshops | July 2024</h3>
             <div class="videos">
                 <img src="./images/audio_workshops.PNG" alt="Audio Workshops page" class="portfolio-img">
