added mui skill. modified jest skill image. removed audio workshops image

--- a/index.html
+++ b/index.html
@@ -64,11 +64,15 @@
                     <figcaption>Node</figcaption>
                 </figure>
                 <figure>
+                    <img src="./images/mui_logo.png" alt="Material UI logo">
+                    <figcaption>Material UI</figcaption>
+                </figure>
+                <figure>
                     <img src="./images/tailwind_logo.png" alt="Tailwind CSS logo">
                     <figcaption>Tailwind CSS</figcaption>
                 </figure>
                 <figure>
-                    <img src="./images/jest_logo.jpeg" alt="Jest logo">
+                    <img src="./images/jest_logo.png" alt="Jest logo">
                     <figcaption>Jest</figcaption>
                 </figure>
             </div>
@@ -78,14 +82,16 @@
             <h2>Portfolio</h2>
             <h3>Mean Kitty | August 2024</h3>
             <div class="video-skills-demonstrated">
-                <p><a href="https://mean-kitty.onrender.com" target="_blank">Mean Kitty</a> is a React app made using Test-Driven Development (TDD) with Jest and React Testing Library. <a href="https://github.com/jonathan-woodruff/mean-kitty" target="_blank">View it on GitHub</a>.</p>
+                <p><a href="https://mean-kitty.onrender.com" target="_blank">Mean Kitty</a> is a React app made using Test-Driven Development (TDD) with Jest and React Testing Library. <a href="https://github.com/jonathan-woodruff/mean-kitty" target="_blank">View the code on GitHub</a>.</p>
             </div>
             <h3>Audio Workshops | July 2024</h3>
+            <!--
             <div class="videos">
                 <img src="./images/audio_workshops.PNG" alt="Audio Workshops page" class="portfolio-img">
             </div>
+            -->
             <div class="video-skills-demonstrated">
-                <p><a href="https://jonathan-woodruff.github.io/audio-workshops" target="_blank">Audio Workshops</a> is a static web page made using Tailwind CSS.</p>
+                <p><a href="https://jonathan-woodruff.github.io/audio-workshops" target="_blank">Audio Workshops</a> is a static web page made using Tailwind CSS. <a href="https://github.com/jonathan-woodruff/audio-workshops" target="_blank">View the code on GitHub</a>.</p>
             </div>
             <h3>Jeezik | June 2024</h3>
             <div class="videos">
@@ -95,7 +101,7 @@
                 </video>
             </div>
             <div class="video-skills-demonstrated">
-                <p><a href="https://github.com/jonathan-woodruff/jeezik-portfolio" target="_blank">Jeezik</a> is a PERN app that uses <a href="./images/jeezik_model.pdf" target="_blank">a linear programming model</a> behind the scenes to minimize the total travel time for the selected anesthesiologists.</p>
+                <p><a href="https://github.com/jonathan-woodruff/jeezik-portfolio" target="_blank">Jeezik</a> is a PERN app that uses <a href="./images/jeezik_model.pdf" target="_blank">a linear programming model</a> behind the scenes to minimize the total travel time for select anesthesiologists.</p>
             </div>
 
             <h3>Got Groceries | April 2024</h3>
