--- a/index.html
+++ b/index.html
@@ -37,31 +37,35 @@
             <div class="skills">
                 <figure>
                     <img src="./images/html5_logo.webp" alt="HTML5 logo">
-                    <figcaption>HTML5</figcaption>
+                    <figcaption><a href="https://jonathan-woodruff.github.io/images/full-stack-certification.pdf" target="_blank">HTML5</a></figcaption>
                 </figure>
                 <figure>
                     <img src="./images/css_logo.webp" alt="CSS logo">
-                    <figcaption>CSS</figcaption>
+                    <figcaption><a href="https://jonathan-woodruff.github.io/images/full-stack-certification.pdf" target="_blank">CSS</a></figcaption>
                 </figure>
                 <figure>
                     <img src="./images/javascript_logo.webp" alt="JavaScript logo">
-                    <figcaption>JavaScript</figcaption>
+                    <figcaption><a href="https://jonathan-woodruff.github.io/images/full-stack-certification.pdf" target="_blank">JavaScript</a></figcaption>
+                </figure>
+                <figure>
+                    <img src="./images/sql_logo.webp" alt="SQL logo">
+                    <figcaption><a href="https://jonathan-woodruff.github.io/images/full-stack-certification.pdf" target="_blank">SQL</a></figcaption>
                 </figure>
                 <figure>
                     <img src="./images/postgresql_logo.webp" alt="PostgreSQL logo">
-                    <figcaption>PostgreSQL</figcaption>
+                    <figcaption><a href="https://jonathan-woodruff.github.io/images/full-stack-certification.pdf" target="_blank">PostgreSQL</a></figcaption>
                 </figure>
                 <figure>
                     <img src="./images/express_logo.webp" alt="Express logo">
-                    <figcaption>Express</figcaption>
+                    <figcaption><a href="https://jonathan-woodruff.github.io/images/full-stack-certification.pdf" target="_blank">Express</a></figcaption>
                 </figure>
                 <figure>
                     <img src="./images/react_logo.webp" alt="React logo">
-                    <figcaption>React</figcaption>
+                    <figcaption><a href="https://jonathan-woodruff.github.io/images/full-stack-certification.pdf" target="_blank">React</a></figcaption>
                 </figure>
                 <figure>
                     <img src="./images/node_logo.webp" alt="Node logo">
-                    <figcaption>Node</figcaption>
+                    <figcaption><a href="https://jonathan-woodruff.github.io/images/full-stack-certification.pdf" target="_blank">Node</a></figcaption>
                 </figure>
                 <figure>
                     <img src="./images/mui_logo.png" alt="Material UI logo">
@@ -73,7 +77,7 @@
                 </figure>
                 <figure>
                     <img src="./images/jest_logo.png" alt="Jest logo">
-                    <figcaption>Jest</figcaption>
+                    <figcaption><a href="https://jonathan-woodruff.github.io/images/react-testing-certification.pdf" target="_blank">Jest</a></figcaption>
                 </figure>
             </div>
             <a href="mailto: jonathanMwoodruff@gmail.com" class="email-link"><button>Ask me which new skills I'm building</button></a>
