added bootstrap cert

--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
                     <figcaption>Tailwind CSS</figcaption>
                 </figure>
                 <figure>
+                    <img src="./images/bootstrap_logo.png" alt="Bootstrap logo">
+                    <figcaption><a href="https://jonathan-woodruff.github.io/images/bootstrap-certification.pdf" target="_blank">Bootstrap</a></figcaption>
+                </figure>
+                <figure>
                     <img src="./images/jest_logo.png" alt="Jest logo">
                     <figcaption><a href="https://jonathan-woodruff.github.io/images/react-testing-certification.pdf" target="_blank">Jest</a></figcaption>
                 </figure>
