added mongo db cert and skill

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
                     <figcaption><a href="https://jonathan-woodruff.github.io/images/full-stack-certification.pdf" target="_blank">PostgreSQL</a></figcaption>
                 </figure>
                 <figure>
+                    <img src="./images/mongodb_logo.png" alt="MongoDB Logo">
+                    <figcaption><a href="https://jonathan-woodruff.github.io/images/mongodb-certification.pdf" target="_blank">MongoDB</a></figcaption>
+                </figure>
+                <figure>
                     <img src="./images/express_logo.webp" alt="Express logo">
                     <figcaption><a href="https://jonathan-woodruff.github.io/images/full-stack-certification.pdf" target="_blank">Express</a></figcaption>
                 </figure>
