added webpack and babel skills

--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
                     <img src="./images/jest_logo.png" alt="Jest logo">
                     <figcaption><a href="https://jonathan-woodruff.github.io/images/react-testing-certification.pdf" target="_blank">Jest</a></figcaption>
                 </figure>
+                <figure>
+                    <img src="./images/webpack_logo.png" alt="Webpack logo">
+                    <figcaption><a href="https://jonathan-woodruff.github.io/images/build-tools-certification.pdf" target="_blank">Webpack</a></figcaption>
+                </figure>
+                <figure>
+                    <img src="./images/babel_logo.png" alt="Babel logo">
+                    <figcaption><a href="https://jonathan-woodruff.github.io/images/build-tools-certification.pdf" target="_blank">Babel</a></figcaption>
+                </figure>
             </div>
             <a href="mailto: jonathanMwoodruff@gmail.com" class="email-link"><button>Ask me which new skills I'm building</button></a>
         </section>
