added peace chickens

--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
                     <img src="./images/webpack_logo.png" alt="Webpack logo">
                     <figcaption><a href="https://jonathan-woodruff.github.io/images/build-tools-certification.pdf" target="_blank">Webpack</a></figcaption>
                 </figure>
-                <figure>
-                    <img src="./images/babel_logo.png" alt="Babel logo">
-                    <figcaption><a href="https://jonathan-woodruff.github.io/images/build-tools-certification.pdf" target="_blank">Babel</a></figcaption>
-                </figure>
             </div>
             <a href="mailto: jonathanMwoodruff@gmail.com" class="email-link"><button>Ask me which new skills I'm building</button></a>
         </section>
         <section class="projects-section">
             <h2>Portfolio</h2>
+            <h3>Peace Chickens | October 2024 - Present</h3>
+            <div class="video-skills-demonstrated">
+                <p><a href="https://peacechickens.com" target="_blank">Peace Chickens</a> is a full-stack, Webpack-bundled app boasting real users, developed using plain vanilla JavaScript, Bootstrap, Node, and MongoDB. It demonstrates comprehensive skills including user authentication, user input validation, user avatar/image storage, user email/password change functionality, API integration with Stripe, automatic email generation, error handling, CRUD operations, and more.</p>
+            </div>
             <h3>Mean Kitty | August 2024</h3>
             <div class="video-skills-demonstrated">
                 <p><a href="https://mean-kitty.onrender.com" target="_blank">Mean Kitty</a> is a React app made using Test-Driven Development (TDD) with Jest and React Testing Library. <a href="https://github.com/jonathan-woodruff/mean-kitty" target="_blank">View the code on GitHub</a>.</p>
