added auto save skill for peace chickens

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h2>Portfolio</h2>
             <h3>Peace Chickens | October 2024 - Present</h3>
             <div class="video-skills-demonstrated">
-                <p><a href="https://peacechickens.com" target="_blank">Peace Chickens</a> is a full-stack, Webpack-bundled app boasting real users, developed using plain vanilla JavaScript, Bootstrap, Node, and MongoDB. It demonstrates comprehensive skills including user authentication, user input validation, user avatar/image storage, user email/password change functionality, API integration with Stripe, automatic email generation, error handling, CRUD operations, and more.</p>
+                <p><a href="https://peacechickens.com" target="_blank">Peace Chickens</a> is a full-stack, Webpack-bundled app boasting real users, developed using plain vanilla JavaScript, Bootstrap, Node, and MongoDB. It demonstrates comprehensive skills including user authentication, user input validation, user avatar/image storage, user email/password change functionality, API integration with Stripe, CRUD operations, error handling, recursive auto-saving, automatic email generation, and more.</p>
             </div>
             <h3>Mean Kitty | August 2024</h3>
             <div class="video-skills-demonstrated">
