added chess960 generator to portfolio

--- a/index.html
+++ b/index.html
@@ -96,9 +96,13 @@
         </section>
         <section class="projects-section">
             <h2>Portfolio</h2>
+            <h3>Chess960 Generator | March 2025</h3>
+            <div class="video-skills-demonstrated">
+                <p><a href="https://jonathan-woodruff.github.io/960generator" target="_blank">Chess960 Generator</a> showcases what I can do in less than 8 hours of work. It uses Bootstrap for styling and vanilla JavaScript to randomly generate one of 960 possible starting configurations in chess960.</p>
+            </div>
             <h3>Peace Chickens | October 2024</h3>
             <div class="video-skills-demonstrated">
-                <p><a href="https://peacechickens.com" target="_blank">Peace Chickens</a> is a full-stack, Webpack-bundled app developed using plain vanilla JavaScript, Bootstrap, Node, and MongoDB. It demonstrates comprehensive skills including user authentication, user input validation, user avatar/image storage, user email/password change functionality, API integration with Stripe, CRUD operations, error handling, recursive auto-saving, automatic email generation, and more. Note I am on the free plan for the server, so your first server call may take a minute to complete.</p>
+                <p><a href="https://peacechickens.com" target="_blank">Peace Chickens</a> is a full-stack, Webpack-bundled app developed using plain vanilla JavaScript, Bootstrap, Node, and MongoDB. It demonstrates comprehensive skills including user authentication, user input validation, user avatar/image storage, user email/password change functionality, API integration with Stripe, CRUD operations, error handling, recursive auto-saving, automatic email generation, and more. <b>Important note:</b> I am on the free plan for the server, so your first server call may take a minute to complete.</p>
             </div>
             <h3>Mean Kitty | August 2024</h3>
             <div class="video-skills-demonstrated">
