added mle details

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     <main>
         <div class="banner">
             <img src="./images/profile_pic.JPG" alt="Profile picture of Jonathan Woodruff" class="profile">
-            <h1>Hi, I'm Jonathan</h1>
+            <hgroup>
+                <h1>Hi, I'm Jonathan</h1>
+                <p class="subtitle">Full-Stack Developer & Machine Learning Engineer</p>
+            </hgroup>
             <img src="./images/handshake.gif" alt="emojis shaking hands" class="handshake" id="handshake">
             <button id="shake-button">Shake my hand</button>
             <p id="greeting">Nice to meet you!</p>
@@ -46,6 +49,10 @@
                 <figure>
                     <img src="./images/javascript_logo.webp" alt="JavaScript logo">
                     <figcaption><a href="https://jonathan-woodruff.github.io/images/full-stack-certification.pdf" target="_blank">JavaScript</a></figcaption>
+                </figure>
+                <figure>
+                    <img src="./images/python_logo.png" alt="Python logo">
+                    <figcaption><a href="https://jonathan-woodruff.github.io/images/mle-certification.pdf" target="_blank">Python</a></figcaption>
                 </figure>
                 <figure>
                     <img src="./images/sql_logo.webp" alt="SQL logo">
@@ -72,6 +79,14 @@
                     <figcaption><a href="https://jonathan-woodruff.github.io/images/full-stack-certification.pdf" target="_blank">Node</a></figcaption>
                 </figure>
                 <figure>
+                    <img src="./images/flask_logo.png" alt="Flask logo">
+                    <figcaption><a href="https://jonathan-woodruff.github.io/images/mle-certification.pdf" target="_blank">Flask</a></figcaption>
+                </figure>
+                <figure>
+                    <img src="./images/pandas_logo.png" alt="Pandas logo">
+                    <figcaption><a href="https://jonathan-woodruff.github.io/images/mle-certification.pdf" target="_blank">Pandas</a></figcaption>
+                </figure>
+                <figure>
                     <img src="./images/mui_logo.png" alt="Material UI logo">
                     <figcaption>Material UI</figcaption>
                 </figure>
@@ -96,6 +111,16 @@
         </section>
         <section class="projects-section">
             <h2>Portfolio</h2>
+            <h3>ML Obesity | August 2025</h3>
+            <div class="videos">
+                <video controls class="video-instance">
+                    <source src="./videos/ml_obesity_demo.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+            <div class="video-skills-demonstrated">
+                <p><a href="https://github.com/jonathan-woodruff/ml-obesity" target="_blank">ML Obesity</a> is a Flask app that applies a SVC machine learning model to predict a person's obesity level based on their survey responses. See my <a href="./images/ml_obesity.pdf" target="_blank">project journal</a> which documents the steps I took to arrive at the final product.</p>
+            </div>
             <h3>Chess960 Generator | March 2025</h3>
             <div class="video-skills-demonstrated">
                 <p><a href="https://jonathan-woodruff.github.io/960generator" target="_blank">Chess960 Generator</a> showcases what I can do in less than 8 hours of work. It uses Bootstrap for styling and vanilla JavaScript to randomly generate one of 960 possible starting configurations in chess960.</p>
@@ -119,7 +144,7 @@
             </div>
             <h3>Jeezik | June 2024</h3>
             <div class="videos">
-                <video controls>
+                <video controls class="video-instance">
                     <source src="./videos/jeezik_portfolio_demo.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
@@ -130,7 +155,7 @@
 
             <h3>Got Groceries | April 2024</h3>
             <div class="videos">
-                <video controls>
+                <video controls class="video-instance">
                     <source src="./videos/got_groceries_demo.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
@@ -157,7 +182,7 @@
                     <li><span class="timeframe">Aug 2013 - May 2015</span><hr class="bullet-line"><span class="colon">: </span><strong>I coded numerous optimization algorithms</strong> mostly using Python on my path to earning my Masters in Industrial Engineering from Auburn University.</li>
                     <li><span class="timeframe">Jun 2015 - Jul 2018</span><hr class="bullet-line"><span class="colon">: </span><strong>I developed numerous SQL queries and occasionally programmed software</strong> while working as a Business Intelligence Developer for Epic Systems Corporation in Verona, Wisconsin.</li>
                     <li><span class="timeframe">Aug 2018 - Jun 2023</span><hr class="bullet-line"><span class="colon">: </span><strong>I developed my first full-stack web app on the anvil.works platform</strong> while working in the education and marketing sectors.</li>
-                    <li><span class="timeframe">Aug 2023 - Present</span><hr class="bullet-line"><span class="colon">: </span><strong>I became a <a href="./images/full-stack-certification.pdf" target="_blank">certified full-stack developer</a> via Codecademy</strong> while serving in remote South Africa as a Peace Corps volunteer.</li>
+                    <li><span class="timeframe">Aug 2023 - Present</span><hr class="bullet-line"><span class="colon">: </span><strong>I became a <a href="./images/full-stack-certification.pdf" target="_blank">certified full-stack developer</a> and <a href="./images/mle-certification.pdf" target="_blank">certified machine learning engineer</a> via Codecademy</strong> while serving in remote South Africa as a Peace Corps volunteer.</li>
                 </ul>
             </div>
             <a href="mailto: jonathanMwoodruff@gmail.com" class="email-link"><button>Tell me why I should work for you</button></a>
