updated flask skill

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </figure>
                 <figure>
                     <img src="./images/flask_logo.png" alt="Flask logo">
-                    <figcaption><a href="https://jonathan-woodruff.github.io/images/mle-certification.pdf" target="_blank">Flask</a></figcaption>
+                    <figcaption>Flask</figcaption>
                 </figure>
                 <figure>
                     <img src="./images/pandas_logo.png" alt="Pandas logo">
